Fix /orders/{orderId} path and add add csrf header for change password
