# docs/swagger.json
@@ -8,38 +8,6 @@
     "host": "industrial.market",
     "basePath": "/crutch/methods",
     "paths": {
-        "/order/{orderId}": {
-            "get": {
-                "description": "Get order itemslist",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "order"
-                ],
-                "summary": "List order lines",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Order Id",
-                        "name": "orderId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/main.OrderLine"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/orders/": {
             "get": {
                 "description": "Get orders list",
@@ -110,6 +78,38 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/main.Orders"
+                        }
+                    }
+                }
+            }
+        },
+        "/orders/{orderId}": {
+            "get": {
+                "description": "Get order itemslist",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order"
+                ],
+                "summary": "List order lines",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Order Id",
+                        "name": "orderId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.OrderLine"
+                            }
                         }
                     }
                 }
